{/src/main/resources/com/elimu/io/nccn/NSCL Guideline Flow.template}

--- a/src/main/resources/com/elimu/io/nccn/NSCL Guideline Flow.template
+++ b/src/main/resources/com/elimu/io/nccn/NSCL Guideline Flow.template
@@ -102,7 +102,7 @@
     <entry>
       <string>$trId</string>
       <list>
-        <string></string>
+        <string>c</string>
       </list>
     </entry>
   </table>
