{/src/main/resources/com/elimu/io/nccn/NSCL Guideline Flow.template}

--- a/src/main/resources/com/elimu/io/nccn/NSCL Guideline Flow.template
+++ b/src/main/resources/com/elimu/io/nccn/NSCL Guideline Flow.template
@@ -121,7 +121,7 @@
     <entry>
       <string>$q2Str</string>
       <list>
-        <string>0</string>
+        <string>x,y</string>
       </list>
     </entry>
     <entry>
